removed workaround variables.
Sun Apr  2 16:56:57 2006  Tim Janik  <timj@gtk.org>

        * configure.in: removed workaround variables.

        * beast-gtk/Makefile.am: automake fix to build versioned beast.

        * beast-gtk/gxk/Makefile.am: linkage flags fixups.

        * beast-gtk/gxk/gxkstock.c:
        * beast-gtk/gxk/gxkradget.c: fixed missing initializations.

        * shell/Makefile.am: automake fix to build versioned shell.

svn path=/trunk/; revision=3557

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -189,11 +189,10 @@ bstmarshal.c: bstmarshal.list
 #
 # setup BEAST sources and their dependancies
 #
-bin_PROGRAMS = @BEAST_BINARY@			# this expands to beast-$BIN_VERSION
-EXTRA_PROGRAMS = beast-\$(BIN_VERSION)		# make automake-1.4 eat beast____BIN_VERSION_ variables
-beast____BIN_VERSION__SOURCES = bstmain.c $(beast_sources)
-beast____BIN_VERSION__LDADD = $(progs_LDADD)
-beast_objects = $(beast____BIN_VERSION__OBJECTS)
+bin_PROGRAMS = beast-$(BIN_VERSION)		# this expands to beast-0.7.0 or similar
+beast___BIN_VERSION__SOURCES = bstmain.c $(beast_sources)
+beast___BIN_VERSION__LDADD = $(progs_LDADD)
+beast_objects = $(beast___BIN_VERSION__OBJECTS)
 noinst_PROGRAMS = tsmview testgui # bststest
 tsmview_SOURCES = tsmview.c cxxdummy.cc
 tsmview_LDADD = $(progs_LDADD)
