--- a/shell/Makefile.am
+++ b/shell/Makefile.am
@@ -24,10 +24,10 @@ CLEANFILES += $(gen_sources)
 #
 # programs to build
 #
-bin_PROGRAMS = @BSESH_BINARY@			# this expands to bsesh-$BIN_VERSION
-EXTRA_PROGRAMS = bsesh-\$(BIN_VERSION)		# make automake-1.4 eat bsesh____BIN_VERSION_ variables
-bsesh____BIN_VERSION__SOURCES = bsesh.c bsescminterp.c cxxdummy.cc
-bsesh____BIN_VERSION__LDADD = $(programs_ldadd) $(BSE_SHELL_LIBS)
+bin_PROGRAMS = bsesh-$(BIN_VERSION)		# this expands to bsesh-0.7.0 or similar
+bsesh___BIN_VERSION__SOURCES = bsesh.c bsescminterp.c cxxdummy.cc
+bsesh___BIN_VERSION__LDADD = $(programs_ldadd) $(BSE_SHELL_LIBS)
+
 # libraries to link programs against
 programs_ldadd = $(top_builddir)/bse/libbse.la
 # source setups
