auto-add GENERATED to MAINTAINERCLEANFILES. added GENERATED_CLEANFILES for
Sun Apr  2 18:16:56 2006  Tim Janik  <timj@gtk.org>

        * Makefile.decl: auto-add GENERATED to MAINTAINERCLEANFILES.
        added GENERATED_CLEANFILES for generated files to be removed upon
        make clean.

        * beast-gtk/Makefile.am: fixed dependencies. simplified build rules,
        integrated with Makefile.decl. removed lots of cruft.

        * beast-gtk/*.c: various minor fixes.

svn path=/trunk/; revision=3559

--- a/Makefile.decl
+++ b/Makefile.decl
@@ -5,11 +5,12 @@
 
 # declare variables that we might want to use += on.
 INCLUDES=
-MAINTAINERCLEANFILES=
-CLEANFILES=
 EXTRA_HEADERS=
+MAINTAINERCLEANFILES=$(GENERATED)
+CLEANFILES=$(GENERATED_CLEANFILES)
 GENERATED_EXTRA_DIST=
-GENERATED=$(GENERATED_EXTRA_DIST)
+GENERATED_CLEANFILES=
+GENERATED=$(strip $(GENERATED_EXTRA_DIST) $(GENERATED_CLEANFILES))
 EXTRA_DIST=$(GENERATED_EXTRA_DIST)
 
 # assign project wide defaults
