don't link against libsfi/libbirnet if linking against libbse.
Sun Apr  2 18:58:34 2006  Tim Janik  <timj@gtk.org>

        * beast-gtk/Makefile.am: don't link against libsfi/libbirnet if
        linking against libbse.

        * beast-gtk/gxk/dummy.cc:
        * beast-gtk/gxk/Makefile.am: added C++ dummy, for proper linkage
        with older gccs.

svn path=/trunk/; revision=3560

--- a/beast-gtk/gxk/Makefile.am
+++ b/beast-gtk/gxk/Makefile.am
@@ -101,9 +101,9 @@ progs_LDADD = $(strip						\
 )
 
 noinst_PROGRAMS = gxktest splinetest
-gxktest_SOURCES = gxktest.c
+gxktest_SOURCES = gxktest.c dummy.cc
 gxktest_LDADD = $(progs_LDADD)
-splinetest_SOURCES = splinetest.c
+splinetest_SOURCES = splinetest.c dummy.cc
 splinetest_LDADD = $(progs_LDADD)
 
 EXTRA_DIST += $(gxk_headers) $(gxk_extra_sources) $(gxk_built_sources)
