add macros and convenience functions useful for test programs.
Mon Apr  3 23:00:15 2006  Tim Janik  <timj@gtk.org>

        * birnettests.h: add macros and convenience functions useful for
        test programs.

        * tests/signal.cc:
        * tests/threads.cc:
        * tests/ring.cc: use test macros.

        * tests/Makefile.am:
        * tests/testutils.h: removed entirely in favour of birnettests.h.

svn path=/trunk/; revision=3565

--- a/birnet/tests/Makefile.am
+++ b/birnet/tests/Makefile.am
@@ -10,13 +10,9 @@ DEFS	       += -DG_LOG_DOMAIN='"$(basename $(@F))"' -DPARANOID -DG_DISABLE_CONST
 TESTS 		= ring threads signal
 noinst_PROGRAMS = $(TESTS)
 progs_ldadd 	= $(top_builddir)/birnet/libbirnet.o $(BIRNET_LIBS) -lm
-ring_SOURCES	= ring.cc testutils.h
+ring_SOURCES	= ring.cc
 ring_LDADD	= $(progs_ldadd)
-threads_SOURCES	= threads.cc testutils.h
+threads_SOURCES	= threads.cc
 threads_LDADD	= $(progs_ldadd)
 signal_SOURCES	= signal.cc
 signal_LDADD	= $(progs_ldadd)
-
-EXTRA_DIST += $(strip	\
-	testutils.h	\
-)
