--- a/configure.in
+++ b/configure.in
@@ -462,10 +462,6 @@ AC_DEFUN([AC_SUIDMAIN_REQUIREMENTS],
 ])
 AC_DEFUN([AC_BSE_SNDDEV_CHECK],
 [
-    dnl # Check for potential pcm devices
-	
-    bse_have_pcmdev=
-	
     dnl # OSS-Lite driver check
     AC_CHECK_HEADERS(sys/soundcard.h soundcard.h, have_oss_header=yes, have_oss_header=no)
     AC_ARG_ENABLE(osspcm,
@@ -476,9 +472,10 @@ AC_DEFUN([AC_BSE_SNDDEV_CHECK],
 	[  --enable-ossmidi=DEVICE force DEVICE as OSS MIDI device name],
 	[AC_MSG_WARN([Ignoring detection of MIDI device])],
 	[enable_ossmidi=""])
-    AC_MSG_CHECKING([for available OSS sound devices])
+
+    dnl # === OSS PCM device ===
+    AC_MSG_CHECKING([for available OSS audio devices])
     result=
-    dnl # Figure PCM device
     if test -n "$enable_osspcm" ; then
 	dev="$enable_osspcm"
     else
@@ -492,13 +489,18 @@ AC_DEFUN([AC_BSE_SNDDEV_CHECK],
         done
     fi
     if test -n "$dev" ; then
-	bse_have_pcmdev=yes
+	bse_found_pcmdev=yes
 	AC_DEFINE_UNQUOTED(BSE_PCM_DEVICE_CONF_OSS, "$dev", [Device used for PCM I/O])
-	result="$result""PCM:$dev "
+	result="PCM:$dev "
     else
-	result="$result""PCM:none "
+	bse_found_pcmdev=no
+	AC_DEFINE_UNQUOTED(BSE_PCM_DEVICE_CONF_OSS, "/dev/dsp", [Device used for PCM I/O])
+	result="PCM:none (assuming PCM:/dev/dsp)"
     fi
-    dnl # Figure MIDI device
+    AC_MSG_RESULT($result)
+
+    dnl # === OSS MIDI device ===
+    AC_MSG_CHECKING([for available OSS midi devices])
     if test -n "$enable_ossmidi" ; then
         dev="$enable_ossmidi"
     else
@@ -513,16 +515,19 @@ AC_DEFUN([AC_BSE_SNDDEV_CHECK],
         done
     fi
     if test -n "$dev" ; then
+	bse_found_mididev=yes
         AC_DEFINE_UNQUOTED(BSE_MIDI_DEVICE_CONF_OSS, "$dev", [Device used for MID I/O])
-        result="$result""MIDI:$dev "
+        result="MIDI:$dev "
     else
-        result="$result""MIDI:none "
+	bse_found_mididev=no
+        AC_DEFINE_UNQUOTED(BSE_MIDI_DEVICE_CONF_OSS, "/dev/midi", [Device used for MID I/O])
+        result="MIDI:none (assuming MIDI:/dev/midi)"
     fi
     AC_MSG_RESULT($result)
 
-    dnl # Error out if there is no sound device at all
-    if test "x$bse_have_pcmdev" \!= "xyes"; then
-	AC_MSG_ERROR([unable to find any sound drivers/devices])
+    dnl # == Complain about mising devices ===
+    if test "$bse_found_pcmdev $bse_found_mididev" \!= "yes yes"; then
+	AC_MSG_WARN([failed to detect proper sound device files])
     fi
 ])
 AC_DEFUN([AC_DOC_REQUIREMENTS],
