build and check perftest testwavechunk.
Tue Apr  4 02:08:16 2006  Tim Janik  <timj@gtk.org>

        * slowtests/Makefile.am: build and check perftest testwavechunk.

        * tests/Makefile.am: removed outdated rules.

        * tests/bse/Makefile.am: build and test cxxbinding and testplugin.la.

        * tools/scripts/Makefile.am: added script tools waveloadtest.scm and
        noteplaytest.scm.

Tue Apr  4 01:21:32 2006  Tim Janik  <timj@gtk.org>

        * bse/tests/testwavechunk.c:
        * tests/cxxbinding.cc:
        * tests/empty.ogg:
        * tests/perftest.cc:
        * tests/testplugin.cc:
        * tests/testplugin.idl:
        * tests/bse/loophandle.c:
        * tests/scripts/noteplaytest.scm:
        * tests/scripts/waveloadtest.scm: removed from CVS.

svn path=/trunk/; revision=3569

--- a/configure.in
+++ b/configure.in
@@ -630,6 +630,7 @@ library/keys/Makefile
 library/skins/Makefile
 library/skins/images/Makefile
 tools/Makefile
+tools/scripts/Makefile
 po/Makefile.in
 po-helper.sh
 tests/Makefile
@@ -638,6 +639,7 @@ tests/latency/Makefile
 tests/scripts/Makefile
 tests/bse/Makefile
 test/Makefile
+slowtests/Makefile
 doxer/Makefile
 docs/Makefile
 docs/images/Makefile
