--- a/tools/scripts/Makefile.am
+++ b/tools/scripts/Makefile.am
@@ -1,7 +1,9 @@
-# Beast Tests
+# Beast tools/scripts
 #
 ## GNU Lesser General Public License version 2 or any later version.
 include $(top_srcdir)/Makefile.decl
 
 EXTRA_DIST += $(strip \
+	waveloadtest.scm \
+	noteplaytest.scm \
 )
