upgraded Gtk+ dependency to 2.6.4.
Fri Apr  7 18:52:36 2006  Tim Janik  <timj@gtk.org>

        * README:
        * configure.in: upgraded Gtk+ dependency to 2.6.4.

svn path=/trunk/; revision=3580

--- a/configure.in
+++ b/configure.in
@@ -389,17 +389,13 @@ AC_DEFUN([AC_BSE_SHELL_REQUIREMENTS],
 ])
 AC_DEFUN([AC_GXK_REQUIREMENTS],
 [
-    dnl # required libraries
-    DEPENDANCIES=
-    DEPENDANCIES="$DEPENDANCIES gtk+-2.0 >= 2.4.11"
-    DEPENDANCIES="$DEPENDANCIES pangoft2 >= 1.4.0"
-    DEPENDANCIES="$DEPENDANCIES libart-2.0 >= 2.3.8"
-    DEPENDANCIES="$DEPENDANCIES libgnomecanvas-2.0 >= 2.4.0"
-    dnl # define GUI_CFLAGS and GUI_LIBS:
-    PKG_CHECK_MODULES(GUI, $DEPENDANCIES)
-    
-    GXK_CFLAGS="$GUI_CFLAGS"
-    GXK_LIBS="$GUI_LIBS $LIBZ"
+    dnl # required libraries, defines LIB*_CFLAGS and LIB*_LIBS:
+    PKG_CHECK_MODULES(LIBPANGO, pangoft2 >= 1.4.0)
+    PKG_CHECK_MODULES(LIBGTK, gtk+-2.0 >= 2.6.4)
+    PKG_CHECK_MODULES(LIBART, libart-2.0 >= 2.3.8)
+    PKG_CHECK_MODULES(LIBGNOMECANVAS, libgnomecanvas-2.0 >= 2.4.0)
+    GXK_CFLAGS="$LIBPANGO_CFLAGS $LIBGTK_CFLAGS $LIBART_CFLAGS $LIBGNOMECANVAS_CFLAGS"
+    GXK_LIBS="$LIBPANGO_LIBS $LIBGTK_LIBS $LIBART_LIBS $LIBGNOMECANVAS_LIBS $LIBZ"
     AC_SUBST(GXK_CFLAGS)
     AC_SUBST(GXK_LIBS)
 ])
